# 5G_LDPC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SAMSUNG/: LDPC.cpp  LDPC.h  LDPC_Decode.cpp  main.cpp  main.h
common/: Channel.h  GF.h  LDPC.h  LDPC_5G.cpp  LDPC_5G.h  LDPC_P1_38.212.txt  LDPC_P2_38.212.txt  LDPC_helper.cpp  LDPC_helper.h
